fix spacing

--- a/style.css
+++ b/style.css
@@ -24,9 +24,9 @@
 
 #main-content {
 	padding-top: 20pt;
-    background-color: #f9f9f9;
-    height: 1000pt;
-    font-family: 'Roboto', sans-serif;
+  background-color: #f9f9f9;
+  padding-bottom: 50pt;
+  font-family: 'Roboto', sans-serif;
 
 }
 
@@ -52,6 +52,10 @@ a:hover, a:active {
   background-color: #dcdcdc;
 /*  border-radius: 25px;
 */}
+
+.project-col {
+  margin-bottom: 15pt;
+}
 
 .project-container {
   position: relative;
